--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,23 +37,12 @@ body {
 }
 .header button {
   padding: 10px;
-  background-color: aquamarine;
-  color: darkblue;
+  background-color: #78909c;
+  color: #333;
   border-radius: 6px;
 }
 form {
   display: none;
-  position: relative;
-  width: 500px;
-  height: 300px;
-  position: absolute;
-  top: 100px;
-  left: 500px;
-  padding: 10px;
-  background-color: aquamarine;
-  border-style: solid;
-  border-width: 8px 0;
-  border-radius: 5px;
 }
 .form {
   display: block;
@@ -64,7 +53,7 @@ form {
   top: 100px;
   left: 500px;
   padding: 10px;
-  background-color: aquamarine;
+  background-color: #455a64;
   border-style: solid;
   border-width: 8px 0;
   border-radius: 5px;
