--- a/CSS/style.css
+++ b/CSS/style.css
@@ -50,8 +50,9 @@ form {
   width: 500px;
   height: 300px;
   position: absolute;
-  top: 100px;
-  left: 500px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   padding: 10px;
   background-color: #455a64;
   border-style: solid;
@@ -79,9 +80,9 @@ input {
 .books {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(5, 255px);
-  justify-content: space-around;
-  row-gap: 10px;
+  grid-template-columns: repeat(auto-fit, 255px);
+  justify-content: flex-start;
+  gap: 10px 10px;
 }
 .book-card {
   min-height: 300px;
@@ -92,6 +93,7 @@ input {
   background-color: #405762;
   border-style: solid;
   border-width: 0 0 0 10px;
+  margin-left: 10px;
 }
 .book-card h3,
 .book-card p {
